# NUCLEO8

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
app/: ChipSharp.sln
app/ChipSharp.App/: App.axaml  App.axaml.cs  ChipSharp.App.csproj  Program.cs  app.manifest
app/ChipSharp.App/Views/: DebugView.axaml  DebugView.axaml.cs  EmulatorView.axaml  EmulatorView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
app/ChipSharp.Tests/: Chip8BindingsTests.cs  ChipSharp.Tests.csproj
bindings/ChipSharp.Bindings/: Chip8Native.cs
core/: CMakeLists.txt
core/include/chip8/: chip8.h  chip8_export.h  chip8_types.h
core/src/: chip8.c  cpu.c  display.c  fontset.c  input.c  memory.c  timers.c
docs/: ARCHITECTURE.md  NES_ROADMAP.md  OPCODES.md
roms/: README.md
tests/: CMakeLists.txt  test_chip8.c
